--- a/Components/Layout.css
+++ b/Components/Layout.css
@@ -1,27 +1,21 @@
 :root {
+  --black: rgba(0, 0, 0, 1);
+  --green: #129b4c;
+  --offWhite: #f9f9f9;
+  --silver: #f5f7fa;
+  --lightGrey: #727272;
+  --darkGrey: #1b1b1b;
   --letterSpacing: 0.04rem;
-  --offWhite: #f5f5f5;
-  --white: #ffffff;
-  --beige: #efeae5;
-  --darkBeige: #fde6ce;
-  --lightGrey: #888888;
-  --darkGreen: #2e5e37;
-  --neonGreen: #039f20;
-  --lightGreen: #308440;
-  --darkBlue: #14212b;
-  --darkGrey: #17212a;
-  --orange: #ff9d00;
   --transition: 500ms ease-in-out;
   --boxShadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px !important;
   --cardBorderRadius: 16px;
-  --lightBlue: #7d91a0;
   --transition: 500ms ease-in-out;
 }
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box !important;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 ul {
   list-style: none;
@@ -68,191 +62,4 @@ select {
 }
 .left-align {
   text-align: left;
-}
-
-/* breadcrumb list  */
-.breadcrumb-container ol {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
-}
-.breadcrumbs-list {
-  list-style: none;
-}
-.breadcrumbs-list a {
-  text-decoration: none;
-  text-transform: capitalize;
-  color: var(--lightGrey);
-}
-.breadcrumbs-list a:hover {
-  color: black;
-}
-.breadcrumbs-list a::after {
-  content: "/";
-  margin: 0 3px;
-}
-.active-breadcrumb-list {
-  list-style: none;
-}
-.active-breadcrumb-list a {
-  text-decoration: none;
-  text-transform: capitalize;
-  color: var(--darkGrey);
-}
-
-/* anchor tag general styling */
-a {
-  color: var(--darkGrey);
-}
-
-/* colors */
-.blue {
-  color: var(--blue);
-}
-
-/* single professional page  */
-.professional-logo > div {
-  /* top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  background-color: var(--beige);
-}
-
-/* radio button styling  */
-.radio-container {
-  display: block;
-  position: relative;
-  padding-left: 35px;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-/* Hide the browser's default radio button */
-.radio-container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-}
-
-/* Create a custom radio button */
-.checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 25px;
-  width: 25px;
-  background-color: #eee;
-  border-radius: 50%;
-}
-
-/* On mouse-over, add a grey background color */
-.radio-container:hover input ~ .checkmark {
-  background-color: #ccc;
-}
-
-/* When the radio button is checked, add a blue background */
-.radio-container input:checked ~ .checkmark {
-  background-color: var(--darkGrey);
-}
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
-}
-
-/* Show the indicator (dot/circle) when checked */
-.radio-container input:checked ~ .checkmark:after {
-  display: block;
-}
-
-/* Style the indicator (dot/circle) */
-.radio-container .checkmark:after {
-  top: 9px;
-  left: 9px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background: white;
-}
-/* zendesk  */
-#launcher {
-  bottom: 30px !important;
-}
-
-/* navbar  */
-.navbar .navbar-nav > a {
-  display: inline-block;
-  margin: 0 0 0 20px;
-}
-.nav-item > a {
-  margin: 0 0 0 20px;
-}
-@media (max-width: 1200px) {
-  .navbar-toggler {
-    margin-top: -40px;
-  }
-  .navbar-brand {
-    margin-top: -40px;
-  }
-  .navbar-collapse {
-    margin-top: -40px;
-  }
-  .navbar-nav {
-    background-color: white;
-    position: relative;
-    z-index: 100;
-    background-color: var(--darkGreen);
-  }
-  .dropdown-menu {
-    background-color: var(--lightGreen);
-  }
-  .dropdown-item {
-    color: white !important;
-  }
-  .nav-link {
-    margin: 0 !important;
-    padding: 10px 100px 10px 20px !important;
-    color: white !important;
-  }
-  .navbar-toggler:focus {
-    box-shadow: none;
-  }
-}
-
-/* testimonials */
-.slick-dots button::before {
-  color: white !important;
-  font-size: 1rem !important;
-}
-.slick-arrow::before {
-  font-size: 3rem !important;
-}
-
-/* about us */
-.image-title-content ul {
-  margin-left: 20px;
-}
-
-/* policy page */
-.policy-page > div > ol > li {
-  margin: 20px 0 0 0;
-}
-
-/* pdf file  */
-.wp-block-file a {
-  color: white;
-  margin-right: 10px;
-}
-.wp-block-file a:hover {
-  color: rgb(228, 228, 228);
 }
