--- a/Components/Layout.css
+++ b/Components/Layout.css
@@ -71,12 +71,12 @@ select {
 h2 {
   font-size: 5rem;
   font-weight: 700;
-  line-height: 4.8rem;
+  line-height: 6rem;
 }
 @media (max-width: 500px) {
   h2 {
     font-size: 3rem;
-    line-height: 3rem;
+    line-height: 3.5rem;
   }
 }
 h2 strong {
@@ -157,4 +157,12 @@ h5 strong {
 /* accordion */
 .accordion h2 {
   line-height: 1rem;
+}
+
+/* ketty bot page */
+.ketty-bot-page iframe {
+  border-radius: 30px;
+}
+.just-video iframe {
+  border-radius: 0 !important;
 }
