added more data in bellabot and pudubot

--- a/Components/Layout.css
+++ b/Components/Layout.css
@@ -7,6 +7,7 @@
   --silver: #f5f7fa;
   --lightGrey: #727272;
   --darkGrey: #1b1b1b;
+  --lightBlack: #101010;
   --letterSpacing: 0.04rem;
   --transition: 500ms ease-in-out;
   --boxShadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px !important;
